--- a/FinalProject/FinalProject.tex
+++ b/FinalProject/FinalProject.tex
@@ -79,7 +79,7 @@ Since we will be holding a contest, there are some rules and constraints that mu
 
 \begin{itemize}
     \item Everyone must use a standard 2 liter soda bottle.  The beverage choice is up to you...
-    \item All rockets will be pressurized to 7 bar ($7\times10^5$ Pa)
+    \item All rockets will be pressurized to 7 bar (1 bar is $1\times10^5$ Pa)
     \item All rockets will carry a 10 g altimeter payload on top
     \item All rockets must use the provided bottle cap / nozzle.  However, the nozzle internal
         hole may be modified by the teams
